--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pathfind-client",
   "version": "0.1.0",
-  "private": true,
+  "homepage" : "./",
   "dependencies": {
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
@@ -14,7 +14,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "startServer": "node ../pathfind-server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
